fix overflow issues in container item

--- a/devel/files/default.css
+++ b/devel/files/default.css
@@ -64,7 +64,8 @@ legend {
 }
 .container__item {
   flex: 1;
-  padding: 0 10px 10px 10px;
+  margin: 0 10px 10px 10px;
+  overflow: hidden;
 }
 /* DISPLAY UTILITIES */
 .d-none {
